--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  background-color: #f3f4f6;
+  font-family: 'Dosis', sans-serif;
+  font-family: 'KoHo', sans-serif;
+  font-family: 'Noto Sans HK', sans-serif;
+  font-family: 'Prompt', sans-serif;
+  font-family: 'Roboto Mono', monospace;
+  font-family: 'Varela Round', sans-serif;
+}
+
+.toggle-checkbox {
+  @apply absolute block w-6 h-6 dark:bg-white border-4 dark:border-gray-400 rounded-full appearance-none cursor-pointer focus:outline-none bg-gray-800 border-gray-100;
+}
+
+.toggle-checkbox:checked {
+  @apply right-0 border-gray-400;
+}
+
+.toggle-label {
+  @apply block h-6 align-middle overflow-hidden text-gray-100 bg-gray-100 rounded-full cursor-pointer dark:text-gray-400 dark:bg-gray-400 dark:border-gray-400 border-gray-100 border-2;
+}
