--- a/styles/global.css
+++ b/styles/global.css
@@ -23,3 +23,7 @@ html {
 .toggle-label {
   @apply block h-6 align-middle overflow-hidden text-gray-200 bg-gray-200 rounded-full cursor-pointer dark:text-gray-400 dark:bg-gray-400 dark:border-gray-400 border-gray-200 border-2;
 }
+
+.hljs {
+  @apply rounded-lg;
+}
