--- a/styles/global.scss
+++ b/styles/global.scss
@@ -31,3 +31,9 @@ code {
   border-radius: 4px;
   vertical-align: 0.08em;
 }
+
+blockquote {
+  padding: 0 1em;
+  color: #acaaa8ee;
+  border-left: 0.25em solid #979593ee;
+}
