--- a/styles/global.scss
+++ b/styles/global.scss
@@ -5,6 +5,45 @@
 
 html {
   background-color: #f3f4f6;
+  @media screen and (max-width: 768px) {
+    /* 768pxまでの幅の場合に適応される */
+    min-width: 1000px;
+    #_app {
+      min-height: 2000px;
+    }
+    #layout {
+      margin-top: 200px;
+    }
+    #post-container {
+      margin-bottom: 90px;
+    }
+  }
+  @media screen and (max-width: 480px) {
+    /* 480pxまでの幅の場合に適応される */
+    min-width: 1100px;
+    #_app {
+      min-height: 2450px;
+    }
+    #layout {
+      margin-top: 200px;
+    }
+    #post-container {
+      margin-bottom: 90px;
+    }
+  }
+  @media screen and (max-width: 320px) {
+    /* 320pxまでの幅の場合に適応される */
+    min-width: 1000px;
+    #_app {
+      min-height: 2000px;
+    }
+    #layout {
+      margin-top: 200px;
+    }
+    #post-container {
+      margin-bottom: 90px;
+    }
+  }
 }
 
 .toggle-checkbox {
@@ -31,5 +70,3 @@ code {
   border-radius: 4px;
   vertical-align: 0.08em;
 }
-
-
