--- a/styles/unreset.scss
+++ b/styles/unreset.scss
@@ -182,17 +182,17 @@
   @media screen and (max-width: 480px) {
     #post-title {
       margin-top: 30vh;
-      font-size: 30vh;
-      line-height: 250px;
+      font-size: 10vh;
+      line-height: 150px;
     }
     #updated-at {
       margin-bottom: 7vh;
-      font-size: 11vh;
+      font-size: 7vh;
     }
     .post-contents {
       p {
-        font-size: 18vh;
-        line-height: 20vh;
+        font-size: 6.5vh;
+        line-height: 11vh;
       }
 
       a {
@@ -220,7 +220,7 @@
         code {
           padding: initial;
           background: initial;
-          font-size: 12vh;
+          font-size: 1em;
           color: initial;
           border-radius: initial;
           vertical-align: initial;
@@ -241,17 +241,17 @@
 
       h2 {
         @apply font-bold mb-4 border-b-2 mt-9;
-        font-size: 22vh;
-        line-height: 250px;
+        font-size: 8vh;
+        line-height: 120px;
         margin-top: 20vh;
         margin-bottom: 6vh;
       }
 
       h3 {
         @apply text-lg font-bold;
-        font-size: 20vh;
+        font-size: 7vh;
         margin-top: 13vh;
-        line-height: 250px;
+        line-height: 120px;
       }
 
       h4 {
@@ -312,9 +312,9 @@
       }
 
       ul {
-        font-size: 18vh;
+        font-size: 6.5vh;
         margin-top: 6vh;
-        line-height: 20vh;
+        line-height: 10vh;
         menu {
           @apply list-disc pl-5;
         }
@@ -376,17 +376,17 @@
   @media screen and (max-width: 375px) {
     #post-title {
       margin-top: 30vh;
-      font-size: 30vh;
-      line-height: 250px;
+      font-size: 14vh;
+      line-height: 120px;
     }
     #updated-at {
-      margin-bottom: 7vh;
-      font-size: 11vh;
+      margin-bottom: 6vh;
+      font-size: 9vh;
     }
     .post-contents {
       p {
-        font-size: 18vh;
-        line-height: 20vh;
+        font-size: 8vh;
+        line-height: 11vh;
       }
 
       a {
@@ -414,7 +414,7 @@
         code {
           padding: initial;
           background: initial;
-          font-size: 12vh;
+          font-size: 1em;
           color: initial;
           border-radius: initial;
           vertical-align: initial;
@@ -435,17 +435,17 @@
 
       h2 {
         @apply font-bold mb-4 border-b-2 mt-9;
-        font-size: 22vh;
-        line-height: 150px;
+        font-size: 10vh;
+        line-height: 100px;
         margin-top: 20vh;
         margin-bottom: 6vh;
       }
 
       h3 {
         @apply text-lg font-bold;
-        font-size: 20vh;
+        font-size: 9vh;
         margin-top: 13vh;
-        line-height: 150px;
+        line-height: 100px;
       }
 
       h4 {
@@ -506,9 +506,9 @@
       }
 
       ul {
-        font-size: 18vh;
-        margin-top: 6vh;
-        line-height: 20vh;
+        font-size: 8vh;
+        margin-top: 7vh;
+        line-height: 11vh;
         menu {
           @apply list-disc pl-5;
         }
