コードブロックと画像のサイズを修正

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -165,7 +165,7 @@ html {
 code {
   padding: 0.2em 0.4em;
   background: #c7c9caee;
-  font-size: .85em;
+  font-size: 0.85em;
   color: crimson;
   border-radius: 4px;
   vertical-align: 0.08em;
