コードブロックの修正
- 改行
- border-rounded

--- a/styles/unreset.scss
+++ b/styles/unreset.scss
@@ -23,14 +23,14 @@
       }
 
       code {
-        code {
-          padding: initial;
-          background: initial;
-          font-size: 1em;
-          color: initial;
-          border-radius: initial;
-          vertical-align: initial;
-        }
+        padding: 0.2em 0.4em;
+        background-color: rgb(71 85 105);
+        font-size: 0.85em;
+        color: rgb(209 213 219);
+        border-radius: 6px;
+        vertical-align: 0.08em;
+        overflow-wrap: break-word;
+        word-break: break-all;
       }
 
       figure {
@@ -225,14 +225,14 @@
       }
 
       code {
-        code {
-          padding: initial;
-          background: initial;
-          font-size: 12vh;
-          color: initial;
-          border-radius: initial;
-          vertical-align: initial;
-        }
+        padding: 0.2em 0.4em;
+        background-color: rgb(71 85 105);
+        font-size: 0.85em;
+        color: rgb(209 213 219);
+        border-radius: 25px;
+        vertical-align: 0.08em;
+        overflow-wrap: break-word;
+        word-break: break-all;
       }
 
       figure {
@@ -427,14 +427,14 @@
       }
 
       code {
-        code {
-          padding: initial;
-          background: initial;
-          font-size: 12vh;
-          color: initial;
-          border-radius: initial;
-          vertical-align: initial;
-        }
+        padding: 0.2em 0.4em;
+        background-color: rgb(71 85 105);
+        font-size: 0.85em;
+        color: rgb(209 213 219);
+        border-radius: 25px;
+        vertical-align: 0.08em;
+        overflow-wrap: break-word;
+        word-break: break-all;
       }
 
       figure {
