h4タグの文字サイズを大きくする

--- a/styles/unreset.scss
+++ b/styles/unreset.scss
@@ -263,7 +263,11 @@
       }
 
       h4 {
-        @apply text-base font-bold mb-4;
+        @apply font-bold;
+        font-size: 9vh;
+        margin-top: 10vh;
+        margin-bottom: 6vh;
+        line-height: 100px;
       }
 
       h5 {
@@ -465,7 +469,11 @@
       }
 
       h4 {
-        @apply text-base font-bold mb-4;
+        @apply font-bold;
+        font-size: 9vh;
+        margin-top: 10vh;
+        margin-bottom: 6vh;
+        line-height: 100px;
       }
 
       h5 {
