一覧画面にmdファイルを表示できるようにする

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -116,7 +116,7 @@ html {
             #updated-at {
               font-size: 10vh;
             }
-            #tag {
+            #category {
               margin-top: 4vh;
               font-size: 12vh;
             }
