--- a/styles/global.scss
+++ b/styles/global.scss
@@ -37,7 +37,7 @@ html {
               font-size: 13vh;
               line-height: 150px;
             }
-            #updated-at {
+            #date {
               font-size: 9vh;
             }
             #tag {
@@ -113,7 +113,7 @@ html {
               font-size: 13vh;
               line-height: 150px;
             }
-            #updated-at {
+            #date {
               font-size: 10vh;
             }
             #category {
