カテゴリページ毎にmdファイルを表示できるようにする

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -27,7 +27,7 @@ html {
             }
           }
         }
-        #tag-icon {
+        #category-icon {
           font-size: 20vh;
         }
         #post-container {
@@ -103,7 +103,7 @@ html {
             }
           }
         }
-        #tag-icon {
+        #category-icon {
           font-size: 10vh;
         }
         #post-container {
