--- a/styles/unreset.scss
+++ b/styles/unreset.scss
@@ -122,7 +122,12 @@
         @apply list-decimal my-1 pl-5;
       }
 
-      ul,
+      ul {
+        @apply my-4;
+        li {
+          margin-top: 2px;
+        }
+      }
       ol {
         ul {
           list-style-type: circle;
@@ -187,7 +192,7 @@
       font-size: 13vh;
       line-height: 150px;
     }
-    #updated-at {
+    #date {
       margin-bottom: 7vh;
       font-size: 9vh;
     }
@@ -328,7 +333,7 @@
       }
 
       ul {
-        font-size: 9vh;
+        font-size: 7.8vh;
         margin-top: 6vh;
         line-height: 15vh;
         menu {
@@ -540,12 +545,14 @@
 
       ul {
         font-size: 10vh;
-        margin-top: 6vh;
+        margin-top: 8vh;
+        margin-bottom: 8vh;
         line-height: 17vh;
         menu {
           @apply list-disc pl-5;
         }
         li {
+          margin-top: 2vh;
           margin-left: 5vh;
         }
         ol {
