--- a/styles/unreset.scss
+++ b/styles/unreset.scss
@@ -7,6 +7,10 @@
         word-break: break-all;
       }
 
+      p {
+        line-height: 3.5vh;
+      }
+
       blockquote {
         code {
           padding: initial;
@@ -199,7 +203,7 @@
     .post-contents {
       p {
         font-size: 9vh;
-        line-height: 15vh;
+        line-height: 15.5vh;
       }
 
       pre {
@@ -333,7 +337,7 @@
       }
 
       ul {
-        font-size: 7.8vh;
+        font-size: 9vh;
         margin-top: 6vh;
         line-height: 15vh;
         menu {
