--- a/styles/unreset.scss
+++ b/styles/unreset.scss
@@ -7,6 +7,11 @@
         word-break: break-all;
       }
 
+      img {
+        margin-top: 15px;
+        margin-bottom: 15px;
+      }
+
       blockquote {
         code {
           padding: initial;
@@ -219,6 +224,8 @@
 
       img {
         width: 150vh;
+        margin-top: 10vh;
+        margin-bottom: 10vh;
       }
 
       a {
@@ -443,6 +450,8 @@
 
       img {
         width: 150vh;
+        margin-top: 10vh;
+        margin-bottom: 10vh;
       }
 
       a {
