--- a/styles/global.scss
+++ b/styles/global.scss
@@ -19,7 +19,7 @@ html {
             margin-right: initial;
             padding-top: 40px;
           }
-          #github-icon-container {
+          #icon-container {
             #github-icon {
               padding-top: 3vh;
               font-size: 15vh;
