--- a/styles/unreset.scss
+++ b/styles/unreset.scss
@@ -357,6 +357,14 @@
         }
       }
 
+      ol {
+        font-size: 9vh;
+        line-height: 16vh;
+        li {
+          margin-left: 5vh;
+        }
+      }
+
       ul {
         font-size: 9vh;
         margin-top: 10vh;
@@ -588,6 +596,14 @@
               }
             }
           }
+        }
+      }
+
+      ol {
+        font-size: 10vh;
+        line-height: 16vh;
+        li {
+          margin-left: 5vh;
         }
       }
 
